--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "queen_anju",
-  "version": "4.5",
+  "version": "4",
   "description": "A Simple WhatsApp bot created By King-Rashmika",
   "main": "queen.js",
   "scripts": {
@@ -14,6 +14,7 @@
     "@dark-yasiya/news-scrap": "^1.0.1",
     "@dark-yasiya/yt-dl.js": "^1.0.5",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@google/generative-ai": "^0.24.0",
     "@hapi/boom": "^10.0.1",
     "@mr.janiya/xnxx-scraper": "^1.0.0",
     "@mrnima/facebook-downloader": "1.0.0",
@@ -21,9 +22,10 @@
     "@sl-code-lords/esana-news": "1.1.0",
     "@sl-code-lords/movie-api": "1.0.0",
     "@sl-code-lords/si-subdl": "1.1.1",
+    "@upscalerjs/default-model": "^1.0.0-beta.17",
     "@xaviabot/fb-downloader": "^1.0.14",
     "adm-zip": "0.5.16",
-    "anju-xpro-baileys":"8.5.12",
+    "anju-xpro-baileys": "8.5.12",
     "api-dylux": "1.8.5",
     "aptoide-scraper": "1.0.1",
     "axios": "^1.2.5",
@@ -43,6 +45,7 @@
     "genius-lyrics": "^4.4.7",
     "google-tts-api": "2.0.2",
     "https": "^1.0.0",
+    "image-upscaler": "^0.0.7",
     "jimp": "^0.16.13",
     "lyrics-search": "^1.0.0",
     "megajs": "^1.1.0",
@@ -61,9 +64,11 @@
     "seedr": "^1.1.2",
     "stream": "0.0.3",
     "tiktokdl": "0.0.5",
+    "upscaler": "^1.0.0-beta.19",
     "util": "^0.12.4",
     "vm": "^0.1.0",
     "wa-sticker-formatter": "4.4.4",
+    "waifu2x": "^1.4.7",
     "yt-search": "2.11.1"
   }
 }
