--- a/app.json
+++ b/app.json
@@ -9,8 +9,16 @@
       "SESSION_ID": {
       "description": "Put the session-id here.",
       "required": true
-    }   
+     },
+      "GITHUB_TOKEN": {
+      "description": "Put the Github token without ghp_ here.",
+      "required": true  
 },
+      "GITHUB_USERNAME": {
+      "description": "Put the github username here.",
+      "required": true 
+}
+  },
 
      "buildpacks": [
         {
