--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "restart": "pm2 restart Queen_Anju"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "latest",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@google/generative-ai": "^0.24.0",
@@ -19,7 +18,7 @@
     "anju-xpro-baileys":"^8.5.12",
     "api-dylux": "1.8.5",
     "aptoide-scraper": "1.0.1",
-    "axios": "latest",
+    "axios": "^1.2.5",
     "buffer": "6.0.3",
     "cheerio": "1.0.0",
     "crypto": "1.0.1",
@@ -38,7 +37,7 @@
     "lyrics-search": "^1.0.0",
     "megajs": "^1.1.0",
     "moment": "2.30.1",
-    "node-fetch": "latest",
+    "node-fetch": "^2.6.1",
     "openai": "^4.86.1",
     "path": "^0.12.7",
     "pino": "^7.0.5",
