--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "queen_anju",
-  "version": "4",
+  "version": "5.0.0",
   "description": "A Simple WhatsApp bot created By King-Rashmika",
-  "main": "queen.js",
+  "main": "start.js",
   "scripts": {
-    "start": "pm2 start queen.js --deep-monitoring --attach --name Queen_Anju",
+    "start": "pm2 start start.js --deep-monitoring --attach --name Queen_Anju",
     "stop": "pm2 stop Queen_Anju",
     "restart": "pm2 restart Queen_Anju"
   },
@@ -15,13 +15,15 @@
     "@hapi/boom": "^10.0.1",
     "@xaviabot/fb-downloader": "^1.0.14",
     "adm-zip": "0.5.16",
-    "anju-xpro-baileys":"^8.5.12",
+    "anju-xpro-baileys": "9.0.0",
     "api-dylux": "1.8.5",
     "aptoide-scraper": "1.0.1",
     "axios": "^1.2.5",
+    "bcryptjs": "^3.0.2",
     "buffer": "6.0.3",
-    "cheerio": "1.0.0",
+    "cheerio": "^1.1.0",
     "crypto": "1.0.1",
+    "css-select": "5.1.0",
     "express": "latest",
     "ffmpeg": "^0.0.4",
     "file_size_url": "1.0.6",
@@ -34,9 +36,12 @@
     "google-tts-api": "2.0.2",
     "https": "^1.0.0",
     "image-upscaler": "^0.0.7",
+    "jimp": "^0.16.13",
     "lyrics-search": "^1.0.0",
     "megajs": "^1.1.0",
     "moment": "2.30.1",
+    "mongodb": "^6.16.0",
+    "mongoose": "^8.15.0",
     "node-fetch": "^2.6.1",
     "openai": "^4.86.1",
     "path": "^0.12.7",
@@ -47,7 +52,7 @@
     "qrcode-terminal": "^0.12.0",
     "ruhend-scraper": "7.0.6",
     "seedr": "^1.1.2",
-    "stream": "0.0.3",
+    "stream": "^0.0.3",
     "util": "^0.12.4",
     "vm": "^0.1.0",
     "wa-sticker-formatter": "4.4.4",
